FIX: header on mobile, lottie animations width, about name position

--- a/css/style.css
+++ b/css/style.css
@@ -485,7 +485,7 @@ a:hover{
 }
 
 .grid > div {
-  background-color:rgb(130 255 183);
+  background-color:#F0F0F0;
 }
 
 .box-artwork{
@@ -646,7 +646,7 @@ g{
   font-size: 16px;
   font-weight: 600;
   display: inline-block;
-  padding: 16px 0px;
+  padding: 8px 0px;
 }
 
 /* SIDEBAR */
@@ -1077,7 +1077,7 @@ g{
 
   /* SINGLE PROJECT 120 to 480 */
   .content{
-    padding-top:80px
+    padding-top:96px
   }
 
   .box-artwork-single {
@@ -1591,7 +1591,7 @@ g{
 
   .grid > div {
     padding:1em;
-    background-color:rgb(219,255,234);
+    background-color:#F0F0F0;
   }
 
   .box1{
@@ -1730,6 +1730,11 @@ g{
     color: #9e9e9e;
     margin-top: 40px;
     display: block;;
+  }
+
+  .lottie-desktop {
+    width: 70%;
+    margin: auto;
   }
 
   .quote-client-representant{
